<resources>
    <string name="app_name">VuQuynhNhu_K224111461_243MI2702</string>
    <string name="title_login_user_name_hint">User name</string>
    <string name="title_login_password_hint">Password</string>
    <string name="title_login_btn">Login</string>
    <string name="title_admin">Admin</string>
    <string name="title_employee">Employee</string>

    <string name="menu_about">ABOUT</string>
    <string name="title_student_infor">STUDENT INFORMATION</string>
    <string name="title_student_information">STUDENT INFORMATION</string>
    <string name="title_studentID">Student ID: K224111461</string>
    <string name="title_student_name">Student Name: Vu Quynh Nhu</string>
    <string name="title_student_email">Student Email: nhuvq22411c@st.uel.edu.vn</string>
    <string name="title_student_class">Class: K22411C</string>

    <string name="title_list_of_tasks">LIST OF TASKS</string>
    <string name="title_create_new_task">Create a New Task</string>
    <string name="title_create_task">CREATE TASK</string>
    <string name="title_task_title">Task Title:</string>
    <string name="title_assign_to">Assign To:</string>
    <string name="title_customer_phone_number">Customer Phone Number:</string>
    <string name="title_current_task_to_call">Current Task to Call</string>
    <string name="title_select_customer">SELECT CUSTOMER</string>


</resources>