<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:layout_marginTop="40dp"
    android:paddingHorizontal="20dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".k22411cvuquynhnhu.LoginActivity">

    <TextView
        android:id="@+id/txtLogin"
        android:text="@string/title_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/edtUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:hint="@string/title_login_user_name_hint"
        android:inputType="text"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="15dp"
        android:hint="@string/title_login_password_hint"
        android:inputType="textPassword"
        android:textSize="22sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_admin" />

        <RadioButton
            android:id="@+id/radioEmployee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_employee"
            android:layout_marginLeft="20dp"/>
    </RadioGroup>

    <Button
        android:onClick="do_login"
        android:id="@+id/btnLogin"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_login_btn" />

</LinearLayout>