<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".k22411cvuquynhnhu.AboutActivity">

    <TextView
        android:id="@+id/txtStudentInfor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_student_information"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="#E21A1A"
        android:paddingBottom="15dp"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="89dp"
            android:layout_weight="1"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtStudentID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_studentID"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtStudentName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_student_name"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtStudentEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_student_email"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtClass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_student_class"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>