<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".k22411cvuquynhnhu.CreateTaskActivity">
    <!-- Title -->
    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_create_task"
        android:layout_marginTop="12dp"
        android:textSize="20sp"
        android:textColor="#D32F2F"
        android:textStyle="bold"
        android:gravity="center" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="18sp"
        android:text="@string/title_task_title"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtTaskTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="18sp"
        android:paddingBottom="10dp"
        android:text="@string/title_assign_to"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spnEmployee"
        android:layout_width="match_parent"
        android:textSize="18sp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingVertical="10dp"
        android:textSize="18sp"
        android:text="Customer Phone Numbers:"
        android:background="#FFEB3B"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnSelectCustomers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_select_customer" />

    <ListView
        android:id="@+id/lvSelectedCustomers"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="8dp"
        android:dividerHeight="1dp" />

    <Button
        android:id="@+id/btnCreateTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/title_create_task" />
</LinearLayout>